qt/webkit/gen_qwebframe.nim


proc fcQWebHitTestResult_new(): ptr cQWebHitTestResult {.importc: "QWebHitTestResult_new".}
proc fcQWebHitTestResult_new2(other: pointer): ptr cQWebHitTestResult {.importc: "QWebHitTestResult_new2".}
proc fcQWebHitTestResult_operatorAssign(self: pointer, other: pointer): void {.importc: "QWebHitTestResult_operatorAssign".}
proc fcQWebHitTestResult_isNull(self: pointer, ): bool {.importc: "QWebHitTestResult_isNull".}
proc fcQWebHitTestResult_pos(self: pointer, ): pointer {.importc: "QWebHitTestResult_pos".}
proc fcQWebHitTestResult_boundingRect(self: pointer, ): pointer {.importc: "QWebHitTestResult_boundingRect".}
proc fcQWebHitTestResult_enclosingBlockElement(self: pointer, ): pointer {.importc: "QWebHitTestResult_enclosingBlockElement".}
proc fcQWebHitTestResult_title(self: pointer, ): struct_miqt_string {.importc: "QWebHitTestResult_title".}
proc fcQWebHitTestResult_linkText(self: pointer, ): struct_miqt_string {.importc: "QWebHitTestResult_linkText".}
proc fcQWebHitTestResult_linkUrl(self: pointer, ): pointer {.importc: "QWebHitTestResult_linkUrl".}
proc fcQWebHitTestResult_linkTitle(self: pointer, ): pointer {.importc: "QWebHitTestResult_linkTitle".}
proc fcQWebHitTestResult_linkTitleString(self: pointer, ): struct_miqt_string {.importc: "QWebHitTestResult_linkTitleString".}
proc fcQWebHitTestResult_linkTargetFrame(self: pointer, ): pointer {.importc: "QWebHitTestResult_linkTargetFrame".}
proc fcQWebHitTestResult_linkElement(self: pointer, ): pointer {.importc: "QWebHitTestResult_linkElement".}
proc fcQWebHitTestResult_alternateText(self: pointer, ): struct_miqt_string {.importc: "QWebHitTestResult_alternateText".}
proc fcQWebHitTestResult_imageUrl(self: pointer, ): pointer {.importc: "QWebHitTestResult_imageUrl".}
proc fcQWebHitTestResult_pixmap(self: pointer, ): pointer {.importc: "QWebHitTestResult_pixmap".}
proc fcQWebHitTestResult_mediaUrl(self: pointer, ): pointer {.importc: "QWebHitTestResult_mediaUrl".}
proc fcQWebHitTestResult_isContentEditable(self: pointer, ): bool {.importc: "QWebHitTestResult_isContentEditable".}
proc fcQWebHitTestResult_isContentSelected(self: pointer, ): bool {.importc: "QWebHitTestResult_isContentSelected".}
proc fcQWebHitTestResult_element(self: pointer, ): pointer {.importc: "QWebHitTestResult_element".}
proc fcQWebHitTestResult_frame(self: pointer, ): pointer {.importc: "QWebHitTestResult_frame".}
proc fcQWebHitTestResult_delete(self: pointer) {.importc: "QWebHitTestResult_delete".}
proc fcQWebFrame_metaObject(self: pointer, ): pointer {.importc: "QWebFrame_metaObject".}
proc fcQWebFrame_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebFrame_metacast".}
proc fcQWebFrame_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebFrame_metacall".}
proc fcQWebFrame_tr(s: cstring): struct_miqt_string {.importc: "QWebFrame_tr".}
proc fcQWebFrame_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebFrame_trUtf8".}
proc fcQWebFrame_page(self: pointer, ): pointer {.importc: "QWebFrame_page".}
proc fcQWebFrame_load(self: pointer, url: pointer): void {.importc: "QWebFrame_load".}
proc fcQWebFrame_loadWithRequest(self: pointer, request: pointer): void {.importc: "QWebFrame_loadWithRequest".}
proc fcQWebFrame_setHtml(self: pointer, html: struct_miqt_string): void {.importc: "QWebFrame_setHtml".}
proc fcQWebFrame_setContent(self: pointer, data: struct_miqt_string): void {.importc: "QWebFrame_setContent".}
proc fcQWebFrame_addToJavaScriptWindowObject(self: pointer, name: struct_miqt_string, objectVal: pointer): void {.importc: "QWebFrame_addToJavaScriptWindowObject".}
proc fcQWebFrame_toHtml(self: pointer, ): struct_miqt_string {.importc: "QWebFrame_toHtml".}
proc fcQWebFrame_toPlainText(self: pointer, ): struct_miqt_string {.importc: "QWebFrame_toPlainText".}
proc fcQWebFrame_title(self: pointer, ): struct_miqt_string {.importc: "QWebFrame_title".}
proc fcQWebFrame_setUrl(self: pointer, url: pointer): void {.importc: "QWebFrame_setUrl".}
proc fcQWebFrame_url(self: pointer, ): pointer {.importc: "QWebFrame_url".}
proc fcQWebFrame_requestedUrl(self: pointer, ): pointer {.importc: "QWebFrame_requestedUrl".}
proc fcQWebFrame_baseUrl(self: pointer, ): pointer {.importc: "QWebFrame_baseUrl".}
proc fcQWebFrame_icon(self: pointer, ): pointer {.importc: "QWebFrame_icon".}
proc fcQWebFrame_frameName(self: pointer, ): struct_miqt_string {.importc: "QWebFrame_frameName".}
proc fcQWebFrame_parentFrame(self: pointer, ): pointer {.importc: "QWebFrame_parentFrame".}
proc fcQWebFrame_childFrames(self: pointer, ): struct_miqt_array {.importc: "QWebFrame_childFrames".}
proc fcQWebFrame_scrollBarPolicy(self: pointer, orientation: cint): cint {.importc: "QWebFrame_scrollBarPolicy".}
proc fcQWebFrame_setScrollBarPolicy(self: pointer, orientation: cint, policy: cint): void {.importc: "QWebFrame_setScrollBarPolicy".}
proc fcQWebFrame_setScrollBarValue(self: pointer, orientation: cint, value: cint): void {.importc: "QWebFrame_setScrollBarValue".}
proc fcQWebFrame_scrollBarValue(self: pointer, orientation: cint): cint {.importc: "QWebFrame_scrollBarValue".}
proc fcQWebFrame_scrollBarMinimum(self: pointer, orientation: cint): cint {.importc: "QWebFrame_scrollBarMinimum".}
proc fcQWebFrame_scrollBarMaximum(self: pointer, orientation: cint): cint {.importc: "QWebFrame_scrollBarMaximum".}
proc fcQWebFrame_scrollBarGeometry(self: pointer, orientation: cint): pointer {.importc: "QWebFrame_scrollBarGeometry".}
proc fcQWebFrame_scroll(self: pointer, param1: cint, param2: cint): void {.importc: "QWebFrame_scroll".}
proc fcQWebFrame_scrollPosition(self: pointer, ): pointer {.importc: "QWebFrame_scrollPosition".}
proc fcQWebFrame_setScrollPosition(self: pointer, pos: pointer): void {.importc: "QWebFrame_setScrollPosition".}
proc fcQWebFrame_scrollToAnchor(self: pointer, anchor: struct_miqt_string): void {.importc: "QWebFrame_scrollToAnchor".}
proc fcQWebFrame_render(self: pointer, param1: pointer): void {.importc: "QWebFrame_render".}
proc fcQWebFrame_render2(self: pointer, param1: pointer, layer: cint): void {.importc: "QWebFrame_render2".}
proc fcQWebFrame_setTextSizeMultiplier(self: pointer, factor: float64): void {.importc: "QWebFrame_setTextSizeMultiplier".}
proc fcQWebFrame_textSizeMultiplier(self: pointer, ): float64 {.importc: "QWebFrame_textSizeMultiplier".}
proc fcQWebFrame_zoomFactor(self: pointer, ): float64 {.importc: "QWebFrame_zoomFactor".}
proc fcQWebFrame_setZoomFactor(self: pointer, factor: float64): void {.importc: "QWebFrame_setZoomFactor".}
proc fcQWebFrame_hasFocus(self: pointer, ): bool {.importc: "QWebFrame_hasFocus".}
proc fcQWebFrame_setFocus(self: pointer, ): void {.importc: "QWebFrame_setFocus".}
proc fcQWebFrame_pos(self: pointer, ): pointer {.importc: "QWebFrame_pos".}
proc fcQWebFrame_geometry(self: pointer, ): pointer {.importc: "QWebFrame_geometry".}
proc fcQWebFrame_contentsSize(self: pointer, ): pointer {.importc: "QWebFrame_contentsSize".}
proc fcQWebFrame_documentElement(self: pointer, ): pointer {.importc: "QWebFrame_documentElement".}
proc fcQWebFrame_ownerElement(self: pointer, ): pointer {.importc: "QWebFrame_ownerElement".}
proc fcQWebFrame_findAllElements(self: pointer, selectorQuery: struct_miqt_string): pointer {.importc: "QWebFrame_findAllElements".}
proc fcQWebFrame_findFirstElement(self: pointer, selectorQuery: struct_miqt_string): pointer {.importc: "QWebFrame_findFirstElement".}
proc fcQWebFrame_hitTestContent(self: pointer, pos: pointer): pointer {.importc: "QWebFrame_hitTestContent".}
proc fcQWebFrame_event(self: pointer, param1: pointer): bool {.importc: "QWebFrame_event".}
proc fcQWebFrame_securityOrigin(self: pointer, ): pointer {.importc: "QWebFrame_securityOrigin".}
proc fcQWebFrame_evaluateJavaScript(self: pointer, scriptSource: struct_miqt_string): pointer {.importc: "QWebFrame_evaluateJavaScript".}
proc fcQWebFrame_print(self: pointer, printer: pointer): void {.importc: "QWebFrame_print".}
proc fcQWebFrame_javaScriptWindowObjectCleared(self: pointer, ): void {.importc: "QWebFrame_javaScriptWindowObjectCleared".}
proc fQWebFrame_connect_javaScriptWindowObjectCleared(self: pointer, slot: int) {.importc: "QWebFrame_connect_javaScriptWindowObjectCleared".}
proc fcQWebFrame_provisionalLoad(self: pointer, ): void {.importc: "QWebFrame_provisionalLoad".}
proc fQWebFrame_connect_provisionalLoad(self: pointer, slot: int) {.importc: "QWebFrame_connect_provisionalLoad".}
proc fcQWebFrame_titleChanged(self: pointer, title: struct_miqt_string): void {.importc: "QWebFrame_titleChanged".}
proc fQWebFrame_connect_titleChanged(self: pointer, slot: int) {.importc: "QWebFrame_connect_titleChanged".}
proc fcQWebFrame_urlChanged(self: pointer, url: pointer): void {.importc: "QWebFrame_urlChanged".}
proc fQWebFrame_connect_urlChanged(self: pointer, slot: int) {.importc: "QWebFrame_connect_urlChanged".}
proc fcQWebFrame_initialLayoutCompleted(self: pointer, ): void {.importc: "QWebFrame_initialLayoutCompleted".}
proc fQWebFrame_connect_initialLayoutCompleted(self: pointer, slot: int) {.importc: "QWebFrame_connect_initialLayoutCompleted".}
proc fcQWebFrame_iconChanged(self: pointer, ): void {.importc: "QWebFrame_iconChanged".}
proc fQWebFrame_connect_iconChanged(self: pointer, slot: int) {.importc: "QWebFrame_connect_iconChanged".}
proc fcQWebFrame_contentsSizeChanged(self: pointer, size: pointer): void {.importc: "QWebFrame_contentsSizeChanged".}
proc fQWebFrame_connect_contentsSizeChanged(self: pointer, slot: int) {.importc: "QWebFrame_connect_contentsSizeChanged".}
proc fcQWebFrame_loadStarted(self: pointer, ): void {.importc: "QWebFrame_loadStarted".}
proc fQWebFrame_connect_loadStarted(self: pointer, slot: int) {.importc: "QWebFrame_connect_loadStarted".}
proc fcQWebFrame_loadFinished(self: pointer, ok: bool): void {.importc: "QWebFrame_loadFinished".}
proc fQWebFrame_connect_loadFinished(self: pointer, slot: int) {.importc: "QWebFrame_connect_loadFinished".}
proc fcQWebFrame_pageChanged(self: pointer, ): void {.importc: "QWebFrame_pageChanged".}
proc fQWebFrame_connect_pageChanged(self: pointer, slot: int) {.importc: "QWebFrame_connect_pageChanged".}
proc fcQWebFrame_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebFrame_tr2".}
proc fcQWebFrame_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebFrame_tr3".}
proc fcQWebFrame_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebFrame_trUtf82".}
proc fcQWebFrame_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebFrame_trUtf83".}
proc fcQWebFrame_load2(self: pointer, request: pointer, operation: cint): void {.importc: "QWebFrame_load2".}
proc fcQWebFrame_load3(self: pointer, request: pointer, operation: cint, body: struct_miqt_string): void {.importc: "QWebFrame_load3".}
proc fcQWebFrame_setHtml2(self: pointer, html: struct_miqt_string, baseUrl: pointer): void {.importc: "QWebFrame_setHtml2".}
proc fcQWebFrame_setContent2(self: pointer, data: struct_miqt_string, mimeType: struct_miqt_string): void {.importc: "QWebFrame_setContent2".}
proc fcQWebFrame_setContent3(self: pointer, data: struct_miqt_string, mimeType: struct_miqt_string, baseUrl: pointer): void {.importc: "QWebFrame_setContent3".}
proc fcQWebFrame_addToJavaScriptWindowObject3(self: pointer, name: struct_miqt_string, objectVal: pointer, ownership: cint): void {.importc: "QWebFrame_addToJavaScriptWindowObject3".}
proc fcQWebFrame_render22(self: pointer, param1: pointer, clip: pointer): void {.importc: "QWebFrame_render22".}
proc fcQWebFrame_render3(self: pointer, param1: pointer, layer: cint, clip: pointer): void {.importc: "QWebFrame_render3".}
proc fcQWebFrame_staticMetaObject(): pointer {.importc: "QWebFrame_staticMetaObject".}


func init*(T: type gen_qwebframe_types.QWebHitTestResult, h: ptr cQWebHitTestResult): gen_qwebframe_types.QWebHitTestResult =
  T(h: h)
proc create*(T: type gen_qwebframe_types.QWebHitTestResult, ): gen_qwebframe_types.QWebHitTestResult =
